--- a/Reproducible Research Assignment - Course Project 2.html
+++ b/Reproducible Research Assignment - Course Project 2.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Alejandro Navas González">
 
-<title>Personal Activity Monitoring Device Research</title>
+<title>A Comprehensive Analysis of Storm-Induced Damages: Insights from NOAA Data</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -80,7 +80,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Personal Activity Monitoring Device Research</h1>
+<h1 class="title">A Comprehensive Analysis of Storm-Induced Damages: Insights from NOAA Data</h1>
 <p class="subtitle lead">Reproducible Research</p>
 </div>
 
